<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bmiUI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_magenda"
    android:backgroundTint="#800F0E0E"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context=".bmi">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/sassooninfantrgregular"
        android:text="@string/bmiTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />



    <View
        style="@style/Divider.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@color/divider" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/sassooninfantrgregular"
        android:text="@string/bmiAgeTitle"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/ageID"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sassooninfantrgregular"
        android:hint="AGE?"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/divider"
        android:textSize="40sp"
        android:textStyle="bold" />


    <View
        style="@style/Divider.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@color/divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:text="@string/bmiHeight"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:gravity="right"
            android:text="@string/bmiWeight"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/heightID"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:hint="In cm"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/divider"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:letterSpacing=".1"
            android:text="cm"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weightID"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:hint="In Kg"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/divider"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:letterSpacing=".1"
            android:text="kg"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/calculatebmibtm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_corner_btn"
        android:fontFamily="@font/sassooninfantrgregular"
        android:onClick="calculateBMI"
        android:text="BMI"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/bmiresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_gravity="center"
        android:fontFamily="@font/sassooninfantrgregular"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />




</LinearLayout>